--- a/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/test-modeler.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/test-modeler.yaml
@@ -1300,7 +1300,7 @@ schemas:
           name: any
           description: Anything
         go:
-          name: interface{}
+          name: any
           description: Anything
       protocol: {}
   dateTimes:
@@ -3544,7 +3544,7 @@ schemas:
           name: ArrayOfGet4ItemsItem
           description: Array of Get4ItemsItem
         go:
-          name: '[]*string'
+          name: '[]string'
           description: Array of Get4ItemsItem
           elementIsPtr: true
       protocol: {}
@@ -3558,7 +3558,7 @@ schemas:
           name: ArrayOfGet5ItemsItem
           description: Array of Get5ItemsItem
         go:
-          name: '[]*string'
+          name: '[]string'
           description: Array of Get5ItemsItem
           elementIsPtr: true
       protocol: {}
@@ -3573,7 +3573,7 @@ schemas:
           name: ArrayOfGet0ItemsItem
           description: Array of Get0ItemsItem
         go:
-          name: '[]*string'
+          name: '[]string'
           description: Array of Get0ItemsItem
           elementIsPtr: true
       protocol: {}
@@ -3587,7 +3587,7 @@ schemas:
           name: ArrayOfGet1ItemsItem
           description: Array of Get1ItemsItem
         go:
-          name: '[]*string'
+          name: '[]string'
           description: Array of Get1ItemsItem
           elementIsPtr: true
       protocol: {}
@@ -3601,7 +3601,7 @@ schemas:
           name: ArrayOfGet2ItemsItem
           description: Array of Get2ItemsItem
         go:
-          name: '[]*string'
+          name: '[]string'
           description: Array of Get2ItemsItem
           elementIsPtr: true
       protocol: {}
@@ -3615,7 +3615,7 @@ schemas:
           name: ArrayOfGet3ItemsItem
           description: Array of Get3ItemsItem
         go:
-          name: '[]*string'
+          name: '[]string'
           description: Array of Get3ItemsItem
           elementIsPtr: true
       protocol: {}
@@ -4566,7 +4566,7 @@ operationGroups:
                     language:
                       default: &ref_160
                         name: ExtensionsClientListByFarmBeatsOptions
-                        description: ExtensionsClientListByFarmBeatsOptions contains the optional parameters for the ExtensionsClient.ListByFarmBeats method.
+                        description: ExtensionsClientListByFarmBeatsOptions contains the optional parameters for the ExtensionsClient.NewListByFarmBeatsPager method.
                       go: *ref_160
                     protocol: {}
                   originalParameter:
@@ -4627,7 +4627,7 @@ operationGroups:
                   language:
                     default: &ref_165
                       name: options
-                      description: ExtensionsClientListByFarmBeatsOptions contains the optional parameters for the ExtensionsClient.ListByFarmBeats method.
+                      description: ExtensionsClientListByFarmBeatsOptions contains the optional parameters for the ExtensionsClient.NewListByFarmBeatsPager method.
                     go: *ref_165
                   protocol: {}
                 serializedName: extensionIds
@@ -4777,7 +4777,7 @@ operationGroups:
               language:
                 default: &ref_174
                   name: ExtensionsClientListByFarmBeatsResponse
-                  description: ExtensionsClientListByFarmBeatsResponse contains the response from method ExtensionsClient.ListByFarmBeats.
+                  description: ExtensionsClientListByFarmBeatsResponse contains the response from method ExtensionsClient.NewListByFarmBeatsPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_173
@@ -4823,7 +4823,7 @@ operationGroups:
                     language:
                       default: &ref_176
                         name: FarmBeatsExtensionsClientListOptions
-                        description: FarmBeatsExtensionsClientListOptions contains the optional parameters for the FarmBeatsExtensionsClient.List method.
+                        description: FarmBeatsExtensionsClientListOptions contains the optional parameters for the FarmBeatsExtensionsClient.NewListPager method.
                       go: *ref_176
                     protocol: {}
                   originalParameter:
@@ -4906,7 +4906,7 @@ operationGroups:
                   language:
                     default: &ref_182
                       name: options
-                      description: FarmBeatsExtensionsClientListOptions contains the optional parameters for the FarmBeatsExtensionsClient.List method.
+                      description: FarmBeatsExtensionsClientListOptions contains the optional parameters for the FarmBeatsExtensionsClient.NewListPager method.
                     go: *ref_182
                   protocol: {}
                 serializedName: farmBeatsExtensionIds
@@ -5239,7 +5239,7 @@ operationGroups:
               language:
                 default: &ref_190
                   name: FarmBeatsExtensionsClientListResponse
-                  description: FarmBeatsExtensionsClientListResponse contains the response from method FarmBeatsExtensionsClient.List.
+                  description: FarmBeatsExtensionsClientListResponse contains the response from method FarmBeatsExtensionsClient.NewListPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_189
@@ -6363,7 +6363,7 @@ operationGroups:
               language:
                 default: &ref_225
                   name: FarmBeatsModelsClientUpdateResponse
-                  description: FarmBeatsModelsClientUpdateResponse contains the response from method FarmBeatsModelsClient.Update.
+                  description: FarmBeatsModelsClientUpdateResponse contains the response from method FarmBeatsModelsClient.BeginUpdate.
                   forLRO: true
                   marshallingFormat: json
                   responseType: true
@@ -6563,7 +6563,7 @@ operationGroups:
                     language:
                       default: &ref_231
                         name: FarmBeatsModelsClientListBySubscriptionOptions
-                        description: FarmBeatsModelsClientListBySubscriptionOptions contains the optional parameters for the FarmBeatsModelsClient.ListBySubscription method.
+                        description: FarmBeatsModelsClientListBySubscriptionOptions contains the optional parameters for the FarmBeatsModelsClient.NewListBySubscriptionPager method.
                       go: *ref_231
                     protocol: {}
                   originalParameter:
@@ -6589,7 +6589,7 @@ operationGroups:
                   language:
                     default: &ref_235
                       name: options
-                      description: FarmBeatsModelsClientListBySubscriptionOptions contains the optional parameters for the FarmBeatsModelsClient.ListBySubscription method.
+                      description: FarmBeatsModelsClientListBySubscriptionOptions contains the optional parameters for the FarmBeatsModelsClient.NewListBySubscriptionPager method.
                     go: *ref_235
                   protocol: {}
                 serializedName: $maxPageSize
@@ -6733,7 +6733,7 @@ operationGroups:
               language:
                 default: &ref_240
                   name: FarmBeatsModelsClientListBySubscriptionResponse
-                  description: FarmBeatsModelsClientListBySubscriptionResponse contains the response from method FarmBeatsModelsClient.ListBySubscription.
+                  description: FarmBeatsModelsClientListBySubscriptionResponse contains the response from method FarmBeatsModelsClient.NewListBySubscriptionPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_239
@@ -6763,7 +6763,7 @@ operationGroups:
                     language:
                       default: &ref_241
                         name: FarmBeatsModelsClientListByResourceGroupOptions
-                        description: FarmBeatsModelsClientListByResourceGroupOptions contains the optional parameters for the FarmBeatsModelsClient.ListByResourceGroup method.
+                        description: FarmBeatsModelsClientListByResourceGroupOptions contains the optional parameters for the FarmBeatsModelsClient.NewListByResourceGroupPager method.
                       go: *ref_241
                     protocol: {}
                   originalParameter:
@@ -6789,7 +6789,7 @@ operationGroups:
                   language:
                     default: &ref_244
                       name: options
-                      description: FarmBeatsModelsClientListByResourceGroupOptions contains the optional parameters for the FarmBeatsModelsClient.ListByResourceGroup method.
+                      description: FarmBeatsModelsClientListByResourceGroupOptions contains the optional parameters for the FarmBeatsModelsClient.NewListByResourceGroupPager method.
                     go: *ref_244
                   protocol: {}
                 serializedName: $maxPageSize
@@ -6951,7 +6951,7 @@ operationGroups:
               language:
                 default: &ref_249
                   name: FarmBeatsModelsClientListByResourceGroupResponse
-                  description: FarmBeatsModelsClientListByResourceGroupResponse contains the response from method FarmBeatsModelsClient.ListByResourceGroup.
+                  description: FarmBeatsModelsClientListByResourceGroupResponse contains the response from method FarmBeatsModelsClient.NewListByResourceGroupPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_248
@@ -7524,7 +7524,7 @@ operationGroups:
                 language:
                   default: &ref_270
                     name: OperationsClientListOptions
-                    description: OperationsClientListOptions contains the optional parameters for the OperationsClient.List method.
+                    description: OperationsClientListOptions contains the optional parameters for the OperationsClient.NewListPager method.
                   go: *ref_270
                 protocol: {}
               originalParameter: []
@@ -7533,7 +7533,7 @@ operationGroups:
               language:
                 default: &ref_271
                   name: options
-                  description: OperationsClientListOptions contains the optional parameters for the OperationsClient.List method.
+                  description: OperationsClientListOptions contains the optional parameters for the OperationsClient.NewListPager method.
                 go: *ref_271
               protocol: {}
             paging:
@@ -7559,7 +7559,7 @@ operationGroups:
               language:
                 default: &ref_274
                   name: OperationsClientListResponse
-                  description: OperationsClientListResponse contains the response from method OperationsClient.List.
+                  description: OperationsClientListResponse contains the response from method OperationsClient.NewListPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_273
@@ -8265,7 +8265,7 @@ operationGroups:
               language:
                 default: &ref_300
                   name: PrivateEndpointConnectionsClientDeleteResponse
-                  description: PrivateEndpointConnectionsClientDeleteResponse contains the response from method PrivateEndpointConnectionsClient.Delete.
+                  description: PrivateEndpointConnectionsClientDeleteResponse contains the response from method PrivateEndpointConnectionsClient.BeginDelete.
                   forLRO: true
                   responseType: true
                 go: *ref_300
@@ -8433,7 +8433,7 @@ operationGroups:
                 language:
                   default: &ref_304
                     name: PrivateEndpointConnectionsClientListByResourceOptions
-                    description: PrivateEndpointConnectionsClientListByResourceOptions contains the optional parameters for the PrivateEndpointConnectionsClient.ListByResource method.
+                    description: PrivateEndpointConnectionsClientListByResourceOptions contains the optional parameters for the PrivateEndpointConnectionsClient.NewListByResourcePager method.
                   go: *ref_304
                 protocol: {}
               originalParameter: []
@@ -8442,7 +8442,7 @@ operationGroups:
               language:
                 default: &ref_305
                   name: options
-                  description: PrivateEndpointConnectionsClientListByResourceOptions contains the optional parameters for the PrivateEndpointConnectionsClient.ListByResource method.
+                  description: PrivateEndpointConnectionsClientListByResourceOptions contains the optional parameters for the PrivateEndpointConnectionsClient.NewListByResourcePager method.
                 go: *ref_305
               protocol: {}
             paging:
@@ -8468,7 +8468,7 @@ operationGroups:
               language:
                 default: &ref_308
                   name: PrivateEndpointConnectionsClientListByResourceResponse
-                  description: PrivateEndpointConnectionsClientListByResourceResponse contains the response from method PrivateEndpointConnectionsClient.ListByResource.
+                  description: PrivateEndpointConnectionsClientListByResourceResponse contains the response from method PrivateEndpointConnectionsClient.NewListByResourcePager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_307
@@ -8639,7 +8639,7 @@ operationGroups:
                 language:
                   default: &ref_312
                     name: PrivateLinkResourcesClientListByResourceOptions
-                    description: PrivateLinkResourcesClientListByResourceOptions contains the optional parameters for the PrivateLinkResourcesClient.ListByResource method.
+                    description: PrivateLinkResourcesClientListByResourceOptions contains the optional parameters for the PrivateLinkResourcesClient.NewListByResourcePager method.
                   go: *ref_312
                 protocol: {}
               originalParameter: []
@@ -8648,7 +8648,7 @@ operationGroups:
               language:
                 default: &ref_313
                   name: options
-                  description: PrivateLinkResourcesClientListByResourceOptions contains the optional parameters for the PrivateLinkResourcesClient.ListByResource method.
+                  description: PrivateLinkResourcesClientListByResourceOptions contains the optional parameters for the PrivateLinkResourcesClient.NewListByResourcePager method.
                 go: *ref_313
               protocol: {}
             paging:
@@ -8674,7 +8674,7 @@ operationGroups:
               language:
                 default: &ref_316
                   name: PrivateLinkResourcesClientListByResourceResponse
-                  description: PrivateLinkResourcesClientListByResourceResponse contains the response from method PrivateLinkResourcesClient.ListByResource.
+                  description: PrivateLinkResourcesClientListByResourceResponse contains the response from method PrivateLinkResourcesClient.NewListByResourcePager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_315
@@ -12477,6 +12477,7 @@ language:
       - *ref_341
       - *ref_342
       - *ref_343
+    rawJSONAsBytes: false
     responseEnvelopes:
       - *ref_344
       - *ref_345
