--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/test-modeler-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/test-modeler-pre.yaml
@@ -1788,7 +1788,7 @@ schemas:
           name: any
           description: Anything
         go:
-          name: interface{}
+          name: any
           description: Anything
       protocol: {}
   dateTimes:
@@ -5111,7 +5111,7 @@ operationGroups:
                 language:
                   default: &ref_177
                     name: OperationsClientListOptions
-                    description: OperationsClientListOptions contains the optional parameters for the OperationsClient.List method.
+                    description: OperationsClientListOptions contains the optional parameters for the OperationsClient.NewListPager method.
                   go: *ref_177
                 protocol: {}
               originalParameter: []
@@ -5120,7 +5120,7 @@ operationGroups:
               language:
                 default: &ref_178
                   name: options
-                  description: OperationsClientListOptions contains the optional parameters for the OperationsClient.List method.
+                  description: OperationsClientListOptions contains the optional parameters for the OperationsClient.NewListPager method.
                 go: *ref_178
               protocol: {}
             paging:
@@ -5146,7 +5146,7 @@ operationGroups:
               language:
                 default: &ref_181
                   name: OperationsClientListResponse
-                  description: OperationsClientListResponse contains the response from method OperationsClient.List.
+                  description: OperationsClientListResponse contains the response from method OperationsClient.NewListPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_180
@@ -5535,7 +5535,7 @@ operationGroups:
                 language:
                   default: &ref_194
                     name: ClientListBySubscriptionOptions
-                    description: ClientListBySubscriptionOptions contains the optional parameters for the Client.ListBySubscription method.
+                    description: ClientListBySubscriptionOptions contains the optional parameters for the Client.NewListBySubscriptionPager method.
                   go: *ref_194
                 protocol: {}
               originalParameter: []
@@ -5544,7 +5544,7 @@ operationGroups:
               language:
                 default: &ref_195
                   name: options
-                  description: ClientListBySubscriptionOptions contains the optional parameters for the Client.ListBySubscription method.
+                  description: ClientListBySubscriptionOptions contains the optional parameters for the Client.NewListBySubscriptionPager method.
                 go: *ref_195
               protocol: {}
             paging:
@@ -5570,7 +5570,7 @@ operationGroups:
               language:
                 default: &ref_198
                   name: ClientListBySubscriptionResponse
-                  description: ClientListBySubscriptionResponse contains the response from method Client.ListBySubscription.
+                  description: ClientListBySubscriptionResponse contains the response from method Client.NewListBySubscriptionPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_197
@@ -5780,7 +5780,7 @@ operationGroups:
                 language:
                   default: &ref_200
                     name: ClientListByResourceGroupOptions
-                    description: ClientListByResourceGroupOptions contains the optional parameters for the Client.ListByResourceGroup method.
+                    description: ClientListByResourceGroupOptions contains the optional parameters for the Client.NewListByResourceGroupPager method.
                   go: *ref_200
                 protocol: {}
               originalParameter: []
@@ -5789,7 +5789,7 @@ operationGroups:
               language:
                 default: &ref_201
                   name: options
-                  description: ClientListByResourceGroupOptions contains the optional parameters for the Client.ListByResourceGroup method.
+                  description: ClientListByResourceGroupOptions contains the optional parameters for the Client.NewListByResourceGroupPager method.
                 go: *ref_201
               protocol: {}
             paging:
@@ -5815,7 +5815,7 @@ operationGroups:
               language:
                 default: &ref_204
                   name: ClientListByResourceGroupResponse
-                  description: ClientListByResourceGroupResponse contains the response from method Client.ListByResourceGroup.
+                  description: ClientListByResourceGroupResponse contains the response from method Client.NewListByResourceGroupPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_203
@@ -6540,7 +6540,7 @@ operationGroups:
               language:
                 default: &ref_222
                   name: ClientCreateOrUpdateResponse
-                  description: ClientCreateOrUpdateResponse contains the response from method Client.CreateOrUpdate.
+                  description: ClientCreateOrUpdateResponse contains the response from method Client.BeginCreateOrUpdate.
                   forLRO: true
                   marshallingFormat: json
                   responseType: true
@@ -6742,7 +6742,7 @@ operationGroups:
               language:
                 default: &ref_229
                   name: ClientDeleteResponse
-                  description: ClientDeleteResponse contains the response from method Client.Delete.
+                  description: ClientDeleteResponse contains the response from method Client.BeginDelete.
                   forLRO: true
                   responseType: true
                 go: *ref_229
@@ -7106,7 +7106,7 @@ operationGroups:
               language:
                 default: &ref_240
                   name: ClientUpdateResponse
-                  description: ClientUpdateResponse contains the response from method Client.Update.
+                  description: ClientUpdateResponse contains the response from method Client.BeginUpdate.
                   forLRO: true
                   marshallingFormat: json
                   responseType: true
@@ -7502,7 +7502,7 @@ operationGroups:
               language:
                 default: &ref_260
                   name: ClientRegenerateKeyResponse
-                  description: ClientRegenerateKeyResponse contains the response from method Client.RegenerateKey.
+                  description: ClientRegenerateKeyResponse contains the response from method Client.BeginRegenerateKey.
                   forLRO: true
                   marshallingFormat: json
                   responseType: true
@@ -7694,7 +7694,7 @@ operationGroups:
               language:
                 default: &ref_267
                   name: ClientRestartResponse
-                  description: ClientRestartResponse contains the response from method Client.Restart.
+                  description: ClientRestartResponse contains the response from method Client.BeginRestart.
                   forLRO: true
                   responseType: true
                 go: *ref_267
@@ -7849,7 +7849,7 @@ operationGroups:
                 language:
                   default: &ref_270
                     name: UsagesClientListOptions
-                    description: UsagesClientListOptions contains the optional parameters for the UsagesClient.List method.
+                    description: UsagesClientListOptions contains the optional parameters for the UsagesClient.NewListPager method.
                   go: *ref_270
                 protocol: {}
               originalParameter: []
@@ -7858,7 +7858,7 @@ operationGroups:
               language:
                 default: &ref_271
                   name: options
-                  description: UsagesClientListOptions contains the optional parameters for the UsagesClient.List method.
+                  description: UsagesClientListOptions contains the optional parameters for the UsagesClient.NewListPager method.
                 go: *ref_271
               protocol: {}
             paging:
@@ -7884,7 +7884,7 @@ operationGroups:
               language:
                 default: &ref_274
                   name: UsagesClientListResponse
-                  description: UsagesClientListResponse contains the response from method UsagesClient.List.
+                  description: UsagesClientListResponse contains the response from method UsagesClient.NewListPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_273
@@ -8061,7 +8061,7 @@ operationGroups:
                 language:
                   default: &ref_278
                     name: PrivateEndpointConnectionsClientListOptions
-                    description: PrivateEndpointConnectionsClientListOptions contains the optional parameters for the PrivateEndpointConnectionsClient.List method.
+                    description: PrivateEndpointConnectionsClientListOptions contains the optional parameters for the PrivateEndpointConnectionsClient.NewListPager method.
                   go: *ref_278
                 protocol: {}
               originalParameter: []
@@ -8070,7 +8070,7 @@ operationGroups:
               language:
                 default: &ref_279
                   name: options
-                  description: PrivateEndpointConnectionsClientListOptions contains the optional parameters for the PrivateEndpointConnectionsClient.List method.
+                  description: PrivateEndpointConnectionsClientListOptions contains the optional parameters for the PrivateEndpointConnectionsClient.NewListPager method.
                 go: *ref_279
               protocol: {}
             paging:
@@ -8096,7 +8096,7 @@ operationGroups:
               language:
                 default: &ref_282
                   name: PrivateEndpointConnectionsClientListResponse
-                  description: PrivateEndpointConnectionsClientListResponse contains the response from method PrivateEndpointConnectionsClient.List.
+                  description: PrivateEndpointConnectionsClientListResponse contains the response from method PrivateEndpointConnectionsClient.NewListPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_281
@@ -8769,7 +8769,7 @@ operationGroups:
               language:
                 default: &ref_308
                   name: PrivateEndpointConnectionsClientDeleteResponse
-                  description: PrivateEndpointConnectionsClientDeleteResponse contains the response from method PrivateEndpointConnectionsClient.Delete.
+                  description: PrivateEndpointConnectionsClientDeleteResponse contains the response from method PrivateEndpointConnectionsClient.BeginDelete.
                   forLRO: true
                   responseType: true
                 go: *ref_308
@@ -8943,7 +8943,7 @@ operationGroups:
                 language:
                   default: &ref_312
                     name: PrivateLinkResourcesClientListOptions
-                    description: PrivateLinkResourcesClientListOptions contains the optional parameters for the PrivateLinkResourcesClient.List method.
+                    description: PrivateLinkResourcesClientListOptions contains the optional parameters for the PrivateLinkResourcesClient.NewListPager method.
                   go: *ref_312
                 protocol: {}
               originalParameter: []
@@ -8952,7 +8952,7 @@ operationGroups:
               language:
                 default: &ref_313
                   name: options
-                  description: PrivateLinkResourcesClientListOptions contains the optional parameters for the PrivateLinkResourcesClient.List method.
+                  description: PrivateLinkResourcesClientListOptions contains the optional parameters for the PrivateLinkResourcesClient.NewListPager method.
                 go: *ref_313
               protocol: {}
             paging:
@@ -8978,7 +8978,7 @@ operationGroups:
               language:
                 default: &ref_316
                   name: PrivateLinkResourcesClientListResponse
-                  description: PrivateLinkResourcesClientListResponse contains the response from method PrivateLinkResourcesClient.List.
+                  description: PrivateLinkResourcesClientListResponse contains the response from method PrivateLinkResourcesClient.NewListPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_315
@@ -9146,7 +9146,7 @@ operationGroups:
                 language:
                   default: &ref_320
                     name: SharedPrivateLinkResourcesClientListOptions
-                    description: SharedPrivateLinkResourcesClientListOptions contains the optional parameters for the SharedPrivateLinkResourcesClient.List method.
+                    description: SharedPrivateLinkResourcesClientListOptions contains the optional parameters for the SharedPrivateLinkResourcesClient.NewListPager method.
                   go: *ref_320
                 protocol: {}
               originalParameter: []
@@ -9155,7 +9155,7 @@ operationGroups:
               language:
                 default: &ref_321
                   name: options
-                  description: SharedPrivateLinkResourcesClientListOptions contains the optional parameters for the SharedPrivateLinkResourcesClient.List method.
+                  description: SharedPrivateLinkResourcesClientListOptions contains the optional parameters for the SharedPrivateLinkResourcesClient.NewListPager method.
                 go: *ref_321
               protocol: {}
             paging:
@@ -9181,7 +9181,7 @@ operationGroups:
               language:
                 default: &ref_324
                   name: SharedPrivateLinkResourcesClientListResponse
-                  description: SharedPrivateLinkResourcesClientListResponse contains the response from method SharedPrivateLinkResourcesClient.List.
+                  description: SharedPrivateLinkResourcesClientListResponse contains the response from method SharedPrivateLinkResourcesClient.NewListPager.
                   marshallingFormat: json
                   responseType: true
                   resultProp: *ref_323
@@ -9657,7 +9657,7 @@ operationGroups:
               language:
                 default: &ref_344
                   name: SharedPrivateLinkResourcesClientCreateOrUpdateResponse
-                  description: SharedPrivateLinkResourcesClientCreateOrUpdateResponse contains the response from method SharedPrivateLinkResourcesClient.CreateOrUpdate.
+                  description: SharedPrivateLinkResourcesClientCreateOrUpdateResponse contains the response from method SharedPrivateLinkResourcesClient.BeginCreateOrUpdate.
                   forLRO: true
                   marshallingFormat: json
                   responseType: true
@@ -9877,7 +9877,7 @@ operationGroups:
               language:
                 default: &ref_352
                   name: SharedPrivateLinkResourcesClientDeleteResponse
-                  description: SharedPrivateLinkResourcesClientDeleteResponse contains the response from method SharedPrivateLinkResourcesClient.Delete.
+                  description: SharedPrivateLinkResourcesClientDeleteResponse contains the response from method SharedPrivateLinkResourcesClient.BeginDelete.
                   forLRO: true
                   responseType: true
                 go: *ref_352
@@ -9937,6 +9937,7 @@ language:
       - *ref_371
       - *ref_372
       - *ref_373
+    rawJSONAsBytes: false
     responseEnvelopes:
       - *ref_374
       - *ref_375
